--- a/bahasa.html
+++ b/bahasa.html
@@ -28,9 +28,9 @@
   </div></a>
   <!-- SECTION 1-->
   <section style="background-color: #0D47A1; width: 100%; min-height: 610px;">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
+    <div class="inventory">
+      <div class="wor">
+        <div class="good-md-12">
           <h1 class="learn">Learn to Code</h1>
           <p class="look">"Jangan meremehkan kekuatan satu baris kode. Setiap kali Anda menulis kode, Anda
             sedang menulis sejarah digital Anda sendiri."</p>
@@ -43,9 +43,9 @@
   <!-- SECTION 2 -->
   <section style=" background-color: #fff4a3; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0D47A1" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="container" style=" width: 100%; min-height: 610px;">
-      <div class="row">
-        <div class="col-md-6">
+    <div class="inventory" style=" width: 100%; min-height: 610px;">
+      <div class="wor">
+        <div class="good-md-6">
           <h1 class="nama-bahasa">HTML</h1><br>
           <p class="penjelasan">HTML (Hypertext Markup Language) adalah bahasa markup standar yang digunakan untuk
             membangun dan mengatur struktur konten halaman web. HTML menggunakan elemen-elemen dan tag-tag
@@ -59,7 +59,7 @@
             <button class="tiga">Learn HTML</button>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="good-md-6">
           <img src="assets/img/div.w3-hide-small.svg" class="gambar-bahasa">
         </div>
       </div>
@@ -71,9 +71,9 @@
   <!-- SECTION 3 -->
   <section style="background-color: #f394ba; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff4a3" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+    <div class="inventory">
+      <div class="wor">
+        <div class="good-md-6">
           <h1 class="nama-bahasa">CSS</h1><br>
           <p class="penjelasan">CSS (Cascading Style Sheets) adalah bahasa yang
             digunakan untuk mengontrol tampilan dan gaya visual dari elemen-elemen dalam halaman web. Dengan
@@ -90,7 +90,7 @@
             <button class="tiga">Learn CSS</button>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="good-md-6">
           <img src="assets/img/div.w3-hide-small (1).svg" class="gambar-bahasa">
         </div>
       </div>
@@ -101,9 +101,9 @@
   <!-- SECTION 4 -->
   <section style="background-color: #B5DAFF; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f394ba" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+    <div class="inventory">
+      <div class="wor">
+        <div class="good-md-6">
           <h1 class="nama-bahasa">JavaScript</h1><br>
           <p class="penjelasan">JavaScript adalah bahasa pemrograman tingkat tinggi yang digunakan untuk
             mengembangkan aplikasi web interaktif. Dibandingkan dengan HTML dan CSS yang fokus pada struktur
@@ -118,7 +118,7 @@
             <button class="tiga">Learn JS</button>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="good-md-6">
           <img src="assets/img/div.w3-hide-small (2).svg" class="gambar-bahasa">
         </div>
       </div>
@@ -129,9 +129,9 @@
   <!-- SECTION 5 -->
   <section style="background-color: #d4fea3; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#B5DAFF" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+    <div class="inventory">
+      <div class="wor">
+        <div class="good-md-6">
           <h1 class="nama-bahasa">Python</h1><br>
           <p class="penjelasan">Python adalah bahasa pemrograman tingkat tinggi
             yang didesain dengan fokus pada kejelasan sintaks dan kemudahan pemahaman. Diciptakan oleh Guido
@@ -143,7 +143,7 @@
             <button class="tiga">Learn Python</button>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="good-md-6">
           <img src="assets/img/div.w3-hide-small (3).svg" class="gambar-bahasa">
         </div>
       </div>
@@ -154,9 +154,9 @@
   <!-- SECTION 6 -->
   <section style="background-color: #d49696; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#d4fea3" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+    <div class="inventory">
+      <div class="wor">
+        <div class="good-md-6">
           <h1 class="nama-bahasa">PHP</h1><br>
           <p class="penjelasan">PHP (Hypertext Preprocessor) adalah bahasa
             pemrograman skrip yang dirancang khusus untuk pengembangan aplikasi web. PHP biasanya dijalankan
@@ -169,7 +169,7 @@
             <button class="tiga">Learn PHP</button>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="good-md-6">
           <img src="assets/img/div.w3-hide-small (4).svg" class="gambar-bahasa">
         </div>
       </div>
@@ -180,11 +180,11 @@
   <!-- SECTION 7 -->
   <section style="background-color: #a1a1a1; width: 100%; min-height: 610px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#d49696" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
+    <div class="inventory">
+      <div class="wor">
+        <div class="good-md-12">
           <h1 class="learn">Quizzes</h1>
-          <p style="color: #fff4a3;; text-align: center; font-family: 'Mukta', sans-serif;">Tes skillmu disini !</p>
+          <p style="color: #fff4a3;; text-align: center;">Tes skillmu disini !</p>
           <div style="display: flex; justify-content: center; align-items: center;">
             <a href="quiz.html" class="quiz-button">Quizzes</a>
           </div>
@@ -204,24 +204,24 @@
     </svg>
   <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
     
-    <div class="container-fluid">
-      <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
-        <div class="col-md-4">
+    <div class="inventory-fluid">
+      <div class="wor" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
+        <div class="good-md-4">
           <h3>Sekretariat HMD TE</h3>
 
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
-            <p style="font-family: 'Mukta', sans-serif;">Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
+            <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
           </div>
           <!-- email -->
           <div class="email icon">
             <i class="fas fa-envelope"></i>
-            <p style="font-family: 'Mukta', sans-serif;">kantorpusat@unmuhjember.ac.id</p>
+            <p>kantorpusat@unmuhjember.ac.id</p>
           </div>
           <!-- telp -->
           <div class="telp icon">
             <i class="fas fa-phone-alt"></i>
-            <p style="font-family: 'Mukta', sans-serif;">(0331) 336728</p>
+            <p>(0331) 336728</p>
           </div>
           <!-- sosmed -->
           <div class="sosmed">
@@ -232,9 +232,9 @@
                 class="fab fa-youtube"></i></a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="good-md-4">
           <!-- copyright -->
-          <p style="text-align: end; font-family: 'Mukta', sans-serif;">&copy 3 Angels Team</p>
+          <p style="text-align: end;">&copy 3 Angels Team</p>
         </div>
       </div>
     </div>
