--- a/forkafest.html
+++ b/forkafest.html
@@ -70,10 +70,10 @@
   <!-- SECTION 1 -->
   <main>
     <section class="about" style="background-color: #f8f8f8 !important;">
-      <div class="container-fluid"
+      <div class="inventory-fluid"
         style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
-        <div class="row" style="width: 90%; padding: 10px; min-height: 100% !important;">
-          <div class="col-md-6">
+        <div class="wor" style="width: 90%; padding: 10px; min-height: 100% !important;">
+          <div class="good-md-6">
             <h1 class="forkafest">Forkafest 2023</h1>
             <div id="countdown" class="time-content">
             </div>
@@ -89,8 +89,8 @@
               </button>
             </div>
           </div>
-          <div class="col-md-6" style="text-align: center; ">
-            <img src="assets/img/forkafest.svg" alt="forkafest" class="img-fluid" style="width: 80%; height: 80%;">
+          <div class="good-md-6" style="text-align: center; ">
+            <img src="assets/img/forkafest.svg" alt="forkafest" class="image-fluid" style="width: 100%; height: 100%;">
           </div>
         </div>
       </div>
@@ -115,20 +115,20 @@
 
     <!-- SECTION 2 -->
     <section style="background-color: #0d47a1;; margin-top: -20px;">
-      <div class="container"
+      <div class="inventory"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos">
+        <div class="wor aos">
           <h2 class="brothree" style="color: #FFB703;; padding: 10px; font-size: 54px;">Forkafest 2023</h2>
         </div>
-        <div class="brofour aos" class="col-md-12" style="font-size: 24px;">
-          <p style="font-family: 'Mukta', sans-serif !important; color: #f8f8f8;">ForkaFest (Informatika Festival)
+        <div class="brofour aos" class="good-md-12" style="font-size: 24px;">
+          <p style="color: #f8f8f8;">ForkaFest (Informatika Festival)
             adalah sebuah festival yang
             berkaitan dengan bidang informatika. Festival ini dirancang untuk menyatukan para profesional, penggiat, dan
             pecinta informatika untuk merayakan dan mengapresiasi perkembangan terbaru dalam dunia teknologi dan
             komputasi. </p>
         </div>
-        <div class="col-md-12 aos" style="text-align: center; margin-top: 75px;">
-          <img src="assets/img/winner.svg" alt="forkafest" class="img-fluid" style="width: 50%; height: 50%;">
+        <div class="good-md-12 aos" style="text-align: center; margin-top: 75px;">
+          <img src="assets/img/winner.svg" alt="forkafest" class="image-fluid" style="width: 50%; height: 50%;">
         </div>
         <div style="text-align: center; margin-top: 50px;">
           <button class="cta1 aos">
@@ -165,14 +165,14 @@
     </style>
     <!-- SECTION 3 -->
     <section style="background-color: #f5f5f5f5;">
-      <div class="container"
+      <div class="inventory"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos">
+        <div class="wor aos">
           <h2 style="color: #0d47a1; padding: 10px; font-size: 54px; text-align: center;">Rangkaian Acara Perlombaan
           </h2>
         </div>
-        <div class="row aos">
-          <div class="col-md-4" style="padding: 30px;">
+        <div class="wor aos">
+          <div class="good-md-4" style="padding: 30px;">
             <!-- card 1 -->
             <div class="card show-shadow">
               <div class="pubg">
@@ -184,7 +184,7 @@
             <!-- 1 end -->
           </div>
 
-          <div class="col-md-4" style="padding: 30px;">
+          <div class="good-md-4" style="padding: 30px;">
             <!-- card 2 -->
             <div class="card show-shadow">
               <div class="mobile-legend">
@@ -194,7 +194,7 @@
             </div>
             <!-- 2 end -->
           </div>
-          <div class="col-md-4" style="padding: 30px;">
+          <div class="good-md-4" style="padding: 30px;">
             <!-- card 3 -->
             <div class="card show-shadow">
               <div class="desain">
@@ -205,8 +205,8 @@
             <!-- 3 end -->
           </div>
         </div>
-        <div class="row aos">
-          <div class="col-md-4" style="padding: 30px;">
+        <div class="wor aos">
+          <div class="good-md-4" style="padding: 30px;">
             <!-- card 4 -->
             <div class="card show-shadow">
               <div class="cyber-security">
@@ -216,7 +216,7 @@
             </div>
             <!-- 4 end -->
           </div>
-          <div class="col-md-4" style="padding: 30px;">
+          <div class="good-md-4" style="padding: 30px;">
             <!-- card 5 -->
             <div class="card show-shadow">
               <div class="web-development">
@@ -226,7 +226,7 @@
             </div>
             <!-- 5 end -->
           </div>
-          <div class="col-md-4" style="padding: 30px;">
+          <div class="good-md-4" style="padding: 30px;">
             <!-- card 6 -->
             <div class="card show-shadow">
               <div class="computer-network">
@@ -339,7 +339,7 @@
     <!-- SECTION 4 -->
     <section
       style="background-color: #0d47a1; margin-top: -10px; min-height: 70vh; display: flex; flex-direction: column;">
-      <div class="container">
+      <div class="inventory">
         <div class="rowo aos" style="margin: 30px;">
           <h2 style="color: #fff; padding: 10px;">Timeline Kegiatan</h2>
         </div>
@@ -387,26 +387,28 @@
     <!-- SECTION 4 END -->
 
   </main>
-  <!-- footer -->
+   <!-- footer -->
+   <section style="background-color: #0D47A1;">
   <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
-    <div class="container-fluid">
-      <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
-        <div class="col-md-4">
+    
+    <div class="inventory-fluid">
+      <div class="wor" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
+        <div class="good-md-4">
           <h3>Sekretariat HMD TE</h3>
 
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
-            <p style="font-family: 'Mukta', sans-serif;">Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
+            <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
           </div>
           <!-- email -->
           <div class="email icon">
             <i class="fas fa-envelope"></i>
-            <p style="font-family: 'Mukta', sans-serif;">kantorpusat@unmuhjember.ac.id</p>
+            <p>kantorpusat@unmuhjember.ac.id</p>
           </div>
           <!-- telp -->
           <div class="telp icon">
             <i class="fas fa-phone-alt"></i>
-            <p style="font-family: 'Mukta', sans-serif;">(0331) 336728</p>
+            <p>(0331) 336728</p>
           </div>
           <!-- sosmed -->
           <div class="sosmed">
@@ -417,13 +419,14 @@
                 class="fab fa-youtube"></i></a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="good-md-4">
           <!-- copyright -->
-          <p style="text-align: end; font-family: 'Mukta', sans-serif;">&copy 3 Angels Team</p>
+          <p style="text-align: end;">&copy 3 Angels Team</p>
         </div>
       </div>
     </div>
   </footer>
+</section>
   <!-- footer end -->
   <script src="script.js"></script>
   <script src="model.js"></script>
