--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       position: relative;
     }
 
-    .slider-content .show .img-c::before {
+    .slider-content .show .image-c::before {
       content: "";
       position: absolute;
       top: 0;
@@ -88,12 +88,12 @@
       mix-blend-mode: multiply;
     }
 
-    .img-c {
+    .image-c {
       height: 100vh;
       width: 100% !important;
     }
 
-    .img-c img {
+    .image-c img {
       height: 100%;
       width: 100%;
       object-fit: cover;
@@ -106,37 +106,37 @@
   <main>
     <!-- slider -->
     <section style="color: white;">
-      <div class="container-c">
+      <div class="inventory-c">
         <div class="slider">
           <div class="slider-content">
             <figure class="show">
-              <div class="img-c">
+              <div class="image-c">
                 <img src="assets/img/bgg/unj.jpg" alt="Coffee">
               </div>
               <div class="content">
-                <div class="col-md-6"
+                <div class="good-md-6"
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
                     <h1 class="title">Teknik Informatika</h1>
                     <p class="sub-title">Unversitas Muhammadiyah Jember</p>
                   </div>
                 </div>
-                <div class="col-md-6"
+                <div class="good-md-6"
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                 </div>
               </div>
             </figure>
             <figure>
-              <div class="img-c">
+              <div class="image-c">
                 <img src="assets/img/bg/4.png" alt="bg1">
               </div>
               <div class="content">
-                <div class="col-md-6"
+                <div class="good-md-6"
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
                     <h1 class="title">Teknik Informatika</h1>
                     <p class="sub-title">Prodi TI Pertama di Jember</p>
-                    <p class="desc" style="font-family: 'Noto Sans Osage', sans-serif;">Bersama Program Studi Teknik
+                    <p class="desc">Bersama Program Studi Teknik
                       Informatika Universitas Muhammadiyah Jember, Anda akan
                       menemukan pengalaman belajar yang tidak hanya fokus ke ilmu pengetahuan melainkan juga pelaksanaan
                       nilai-nilai keislaman untuk membentuk karakter yang religious, profesional, dan competitive. Serta
@@ -146,11 +146,11 @@
               </div>
             </figure>
             <figure>
-              <div class="img-c">
+              <div class="image-c">
                 <img src="assets/img/bg/3.jpg" alt="bg2">
               </div>
               <div class="content">
-                <div class="col-md-6"
+                <div class="good-md-6"
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
                     <h1 class="title">Potensi Informatika</h1>
@@ -193,19 +193,19 @@
           }
         }
       </style>
-      <div class="container"
+      <div class="inventory"
         style="min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos" delay="100">
+        <div class="wor aos" delay="100">
           <h2 style="color: #000000; padding: 50px; color: #FFB703;">Teknik Informatika</h2>
         </div>
-        <div class="row">
-          <div class="col-md-6 aos" delay="100"
+        <div class="wor">
+          <div class="good-md-6 aos" delay="100"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <img src="assets/img/teknik.png" alt="" style="max-height: 300px; padding: 30px;">
           </div>
-          <div class="col-md-6 aos" delay="150"
+          <div class="good-md-6 aos" delay="150"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-            <p class="desc" style="color: #000000;  font-family: 'Mukta', sans-serif;">
+            <p class="desc" style="color: #000000;">
               <span style="color: #FFB703;">Teknik Informatika </span>merupakan bidang ilmu yang mempelajari bagaimana
               menggunakan teknologi komputer secara optimal guna
               menangani masalah transformasi atau pengolahan data dengan proses logika. <span
@@ -246,53 +246,53 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
     </svg>
     <section style="background-color: #0d47a1; margin-top: -20px;">
-      <div class="container"
+      <div class="inventory"
         style="min-height: 50vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos">
+        <div class="wor aos">
           <h2 style="color: #fff; padding: 10px;">Kenapa Harus Teknik Informatika Universitas Muhammadiyah Jember?</h2>
         </div>
-        <div class="row aos">
-          <div class="col-md-3" style="padding: 30px;">
+        <div class="wor aos">
+          <div class="good-md-3" style="padding: 30px;">
             <!-- card -->
             <div class="card inner">
               <div class="overlay"></div>
               <div class="circle">
                 <i class="fa-solid fa-computer f-icon"></i>
               </div>
-              <p style="font-family: 'Mukta', sans-serif;">Fasilitas yang lengkap</p>
+              <p>Fasilitas yang lengkap</p>
             </div>
             <!-- end -->
           </div>
-          <div class="col-md-3" style="padding: 30px;">
+          <div class="good-md-3" style="padding: 30px;">
             <!-- card -->
             <div class="card inner">
               <div class="overlay"></div>
               <div class="circle">
                 <i class="fa-solid fa-school f-icon"></i>
               </div>
-              <p style="font-family: 'Mukta', sans-serif;">Lingkungan yang nyaman</p>
+              <p>Lingkungan yang nyaman</p>
             </div>
             <!-- end -->
           </div>
-          <div class="col-md-3" style="padding: 30px;">
+          <div class="good-md-3" style="padding: 30px;">
             <!-- card -->
             <div class="card inner">
               <div class="overlay"></div>
               <div class="circle">
                 <i class="fa-solid fa-chalkboard-user f-icon"></i>
               </div>
-              <p style="font-family: 'Mukta', sans-serif;">Pengajar yang kompeten</p>
+              <p>Pengajar yang kompeten</p>
             </div>
             <!-- end -->
           </div>
-          <div class="col-md-3" style="padding: 30px;">
+          <div class="good-md-3" style="padding: 30px;">
             <!-- card -->
             <div class="card inner">
               <div class="overlay"></div>
               <div class="circle">
                 <i class="fa-solid fa-handshake user f-icon"></i>
               </div>
-              <p style="font-family: 'Mukta', sans-serif;">Kerjasama yang luas</p>
+              <p>Kerjasama yang luas</p>
             </div>
             <!-- end -->
           </div>
@@ -446,9 +446,9 @@
         </svg>
       </div>
       <!-- main c -->
-      <div class="container"
+      <div class="inventory"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos">
+        <div class="wor aos">
           <h2 style="color: #000000; padding: 10px;">Bahasa Pemrograman yang dipelajari</h2>
         </div>
         <a class="aos" href="bahasa.html">
@@ -572,12 +572,12 @@
     </svg>
     <!-- gallery -->
     <section style="background-color: #0d47a1; margin-top: -10px;">
-      <div class="container aos"
+      <div class="inventory aos"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row" style="margin: 30px;">
+        <div class="wor" style="margin: 30px;">
           <h2 style="color: #fff; padding: 10px;">Gallery</h2>
         </div>
-        <div class="row-c">
+        <div class="wor-c">
           <div id="gallery">
             <div><img src="assets/img/gallery/3.JPG" /><a href="#lightbox-1">512</a></div>
             <div><img src="assets/img/gallery/2.JPG" /><a href="#lightbox-2">513</a></div>
@@ -758,17 +758,31 @@
         transform: translateY(11em) translateX(6em);
       }
     </style>
-    <section style="background-color: #f8f8f8;">
-      <div class="container"
+    <section class="isometri2" style="background-color: #f8f8f8;">
+      <style>
+        .isometri2 {
+          background-image: url(assets/img/bg/iiisometric2.svg);
+          background-size: auto;
+          background-position: center;
+          background-repeat: no-repeat;
+        }
+
+        @media screen and (max-width: 768px) {
+          .isometri2 {
+            background-image: none;
+          }
+        }
+      </style>
+      <div class="inventory"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row">
-          <div class="col-md-12 aos">
+        <div class="wor">
+          <div class="good-md-12 aos">
             <h1 class="text-center">Informasi Pendaftaran</h1>
-            <p style="font-family: 'Mukta', sans-serif;">Penerimaan Mahasiswa Baru di Universitas Muhammadiyah Jember Terdiri Dari Beberapa Jalur</p>
+            <p>Penerimaan Mahasiswa Baru di Universitas Muhammadiyah Jember Terdiri Dari Beberapa Jalur</p>
           </div>
         </div>
-        <div class="row aos" style="width: 100%; min-height: 500px;">
-          <div class="col-md-6"
+        <div class="wor aos" style="width: 100%; min-height: 500px;">
+          <div class="good-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <div class="card-c">
               <div class="heading">PMDK</div>
@@ -780,7 +794,7 @@
               <i class="fa-solid fa-book" style="font-size: 100px;"></i>
             </div>
           </div>
-          <div class="col-md-6"
+          <div class="good-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <div class="card-c">
               <div class="heading">SMPTM</div>
@@ -813,44 +827,47 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2"></path>
     </svg>
   </main>
-  <!-- footer -->
-  <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
-    <div class="container-fluid">
-      <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
-        <div class="col-md-4">
-          <h3>Sekretariat HMD TE</h3>
+ <!-- footer -->
+ <section style="background-color: #0D47A1;">
+<footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
+  
+  <div class="inventory-fluid">
+    <div class="wor" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
+      <div class="good-md-4">
+        <h3>Sekretariat HMD TE</h3>
 
-          <div class="alamat icon">
-            <i class="fas fa-map-marker-alt"></i>
-            <p style="font-family: 'Mukta', sans-serif;">Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
-          </div>
-          <!-- email -->
-          <div class="email icon">
-            <i class="fas fa-envelope"></i>
-            <p style="font-family: 'Mukta', sans-serif;">kantorpusat@unmuhjember.ac.id</p>
-          </div>
-          <!-- telp -->
-          <div class="telp icon">
-            <i class="fas fa-phone-alt"></i>
-            <p style="font-family: 'Mukta', sans-serif;">(0331) 336728</p>
-          </div>
-          <!-- sosmed -->
-          <div class="sosmed">
-            <a href="https://www.instagram.com/unmuhjember_ofc/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100012524498447" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com/unmuhjember_ofc?lang=en" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.youtube.com/channel/UCleKMJMJhS_3HwgSLW0Ywfw" target="_blank"><i
-                class="fab fa-youtube"></i></a>
-          </div>
+        <div class="alamat icon">
+          <i class="fas fa-map-marker-alt"></i>
+          <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
         </div>
-        <div class="col-md-4">
-          <!-- copyright -->
-          <p style="text-align: end; font-family: 'Mukta', sans-serif;">&copy 3 Angels Team</p>
+        <!-- email -->
+        <div class="email icon">
+          <i class="fas fa-envelope"></i>
+          <p>kantorpusat@unmuhjember.ac.id</p>
+        </div>
+        <!-- telp -->
+        <div class="telp icon">
+          <i class="fas fa-phone-alt"></i>
+          <p>(0331) 336728</p>
+        </div>
+        <!-- sosmed -->
+        <div class="sosmed">
+          <a href="https://www.instagram.com/unmuhjember_ofc/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100012524498447" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com/unmuhjember_ofc?lang=en" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.youtube.com/channel/UCleKMJMJhS_3HwgSLW0Ywfw" target="_blank"><i
+              class="fab fa-youtube"></i></a>
         </div>
       </div>
+      <div class="good-md-4">
+        <!-- copyright -->
+        <p style="text-align: end;">&copy 3 Angels Team</p>
+      </div>
     </div>
-  </footer>
-  <!-- footer end -->
+  </div>
+</footer>
+</section>
+<!-- footer end -->
   <script src="assets/js/aos.js"></script>
   <script src="slider.js"></script>
   <script src="script.js"></script>
