--- a/profil.html
+++ b/profil.html
@@ -100,7 +100,7 @@
     </style>
     <section class="about" data-bss-parallax-bg="true"
       style="background-color: #f8f8f8 !important; background-image: url(assets/img/bgg/bgp.jpeg); width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; color: #fff;">
-      <div class="container-fluid" style="height: 100vh; ">
+      <div class="inventory-fluid" style="height: 100vh; ">
         <div class="img-c">
           <div style="z-index: 3;" class="heading aos">
             <h1 class="title">Profil dan dekskripsi</h1>
@@ -111,19 +111,19 @@
     </section>
     <!-- deskripsi -->
     <section style="background-color: #0d47a1;">
-      <div class="container"
+      <div class="inventory"
         style="min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos">
+        <div class="wor aos">
           <h2 style="color: #f8f8f8; padding: 50px;">Program Studi Teknik Informatika</h2>
         </div>
-        <div class="row aos">
-          <div class="col-md-6"
+        <div class="wor aos">
+          <div class="good-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
             <img src="assets/img/teknik.png" alt="" style="max-height: 300px; padding: 30px;">
           </div>
-          <div class="col-md-6"
+          <div class="good-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-            <p class="desc" style="color: #f8f8f8; font-family: 'Mukta', sans-serif;">Dalam program studi teknik informatika Universitas Muhammadiyah Jember, 
+            <p class="desc" style="color: #f8f8f8;">Dalam program studi teknik informatika Universitas Muhammadiyah Jember, 
               Anda akan mengalami pendidikan yang tidak hanya berfokus pada ilmu pengetahuan, tetapi juga menerapkan nilai-nilai
               keislaman guna membentuk karakter yang religius, profesional, dan kompetitif. Kami menyediakan fasilitas belajar
               yang mendukung dan lingkungan yang kondusif untuk mengembangkan potensi Anda.
@@ -150,20 +150,20 @@
 
     <!-- sambutan ketua jurusan -->
     <section style="background-color: #f8f8f8;">
-      <div class="container"
+      <div class="inventory"
         style="min-height: 70vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos">
+        <div class="wor aos">
           <h2 style="padding: 10px;">Sambutan Ketua Jurusan</h2>
         </div>
-        <div class="row aos">
-          <div class="col-md-6"
+        <div class="wor aos">
+          <div class="good-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px 50px;">
             <img src="assets/img/pakari.png" alt="" class=" rounded-circle" style="max-height: 300px; max-width: 300px;">
             <span style="padding-top: 15px; font-weight: 700; font-family: 'Ubuntu', sans-serif;"><b>Ari Eko Wadoyo, S.T., M.Kom</b></span>
           </div>
-          <div class="col-md-6"
+          <div class="good-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-            <p class="desc" style="font-family: 'Mukta', sans-serif;">Assalamu’alaikum wr. wb. Selamat datang di website Program Studi Teknik Informatika
+            <p class="desc">Assalamu’alaikum wr. wb. Selamat datang di website Program Studi Teknik Informatika
               Universitas Muhammadiyah Jember.
               Kami berharap website ini dapat memberikan berbagai informasi seputar program Program Studi Teknik
               Informatika Universitas Muhammadiyah Jember yang dibutuhkan masyarakat. Program Studi Teknik Informatika
@@ -198,20 +198,20 @@
     </svg>
     <!-- visi misi -->
     <section style="background-color: #0d47a1; margin-top: -10px; color: #f8f8f8;">
-      <div class="container"
+      <div class="inventory"
         style="min-height: 50vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos">
+        <div class="wor aos">
           <h2 class="hide-md" style="padding: 10px;">Visi dan Misi</h2>
         </div>
-        <div class="row aos">
-          <div class="col-md-6"
+        <div class="wor aos">
+          <div class="good-md-6"
             style="display: flex; justify-content: flex-start; align-items: center; flex-direction: column; padding: 30px">
             <h3>Misi</h3>
             <q class="desc" style="font-family: 'Mukta', sans-serif;">Menjadi program studi unggul di bidang komputasi cerdas yang berdaya saing di Indonesia
               bernafaskan nilai-nilai
               keislaman pada tahun 2030</q>
           </div>
-          <div class="col-md-6"
+          <div class="good-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px 45px;">
             <h3>Visi</h3>
             <ol class="desc" style="font-family: 'Mukta', sans-serif;">
@@ -241,18 +241,18 @@
     </svg>
     <!-- akreditasi -->
     <section style="background-color: #f8f8f8;">
-      <div class="container"
+      <div class="inventory"
         style="min-height: 50vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <div class="row aos">
+        <div class="wor aos">
           <h2 style="padding: 10px;">Akreditasi</h2>
 
         </div>
-        <div class="row aos">
-          <div class="col-md-12"
+        <div class="wor aos">
+          <div class="good-md-12"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px;text-align:center">
-            <p style="font-family: 'Mukta', sans-serif;">Akreditasi Program Studi Teknik Informatika adalah B sesuai dengan no SK Ban PT
+            <p>Akreditasi Program Studi Teknik Informatika adalah B sesuai dengan no SK Ban PT
               2429/SK/BAN-PT/Akred/S/IX/2018</p>
-            <p style="font-family: 'Mukta', sans-serif;"> dokumen SK dan Sertifikat Akreditasi (Berlaku untuk tahun lululsan 2012 ke atas)</p>
+            <p> dokumen SK dan Sertifikat Akreditasi (Berlaku untuk tahun lululsan 2012 ke atas)</p>
             <div style="text-align: center; margin-top: 20px;">
               <button class="cta">
                 <span>Lihat dokumen</span>
@@ -283,25 +283,27 @@
     </svg>
   </main>
     <!-- footer -->
+  <section style="background-color: #0D47A1;">
   <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
-    <div class="container-fluid">
-      <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
-        <div class="col-md-4">
+    
+    <div class="inventory-fluid">
+      <div class="wor" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
+        <div class="good-md-4">
           <h3>Sekretariat HMD TE</h3>
 
           <div class="alamat icon">
             <i class="fas fa-map-marker-alt"></i>
-            <p style="font-family: 'Mukta', sans-serif;">Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
+            <p>Jl. Karimata No. 49 Jember - Jawa Timur - Indonesia</p>
           </div>
           <!-- email -->
           <div class="email icon">
             <i class="fas fa-envelope"></i>
-            <p style="font-family: 'Mukta', sans-serif;">kantorpusat@unmuhjember.ac.id</p>
+            <p>kantorpusat@unmuhjember.ac.id</p>
           </div>
           <!-- telp -->
           <div class="telp icon">
             <i class="fas fa-phone-alt"></i>
-            <p style="font-family: 'Mukta', sans-serif;">(0331) 336728</p>
+            <p>(0331) 336728</p>
           </div>
           <!-- sosmed -->
           <div class="sosmed">
@@ -312,13 +314,14 @@
                 class="fab fa-youtube"></i></a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="good-md-4">
           <!-- copyright -->
-          <p style="text-align: end; font-family: 'Mukta', sans-serif;">&copy 3 Angels Team</p>
+          <p style="text-align: end;">&copy 3 Angels Team</p>
         </div>
       </div>
     </div>
   </footer>
+</section>
   <!-- footer end -->
   <script src="assets/js/parallax.js"></script>
   <script src="assets/js/aos.js"></script>
